--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,12 @@ visibility: hidden;}
 a { color: #BED730; font-weight: bold;}
 a:hover, a:focus { color: #BED730; }
 a:hover, a:active { outline: none; }
-a:active, input.button:active { outline: 0; position: relative; top: 1px; }
+a:active, input.button:active {
+  outline: 0;
+  position: relative;
+  top: 1px;
+  color: #BED730;
+}
 
 ::-moz-selection { text-shadow: none; background: #888; color: #fff; }
 ::selection { text-shadow: none; background: #888; color: #fff; }
@@ -385,4 +390,70 @@ div.contact td {
 
 div.contact table {
 
+}
+
+/* Blog */
+
+#searchform input#s {
+  background:url(../img/search.jpg) no-repeat top left;
+  border: none;
+  width: 225px;
+  height: 30px;
+  position: relative;
+  padding: 3px 0px 10px 35px;
+}
+
+
+#content #searchform input#searchsubmit.button {
+  border: none;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  text-align: center;
+  background-color: #BED730;
+  color: black;
+  text-shadow: none;
+  width: 70px;
+  background-image: none;
+  float: right;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+  margin-right: 28px;
+  margin-top: -18px;
+}
+
+.widget h3 {
+  font-size: 1.85em;
+  color: #433F40;
+  margin-bottom: 10px;
+  margin-top: 22px;
+}
+
+.widget_categories ul li a {
+  font-size: 14px;
+  line-height: 18px;
+  color: #636363;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.widget_categories ul li a:hover, .widget_categories ul li a:focus { color: #BED730; }
+.widget_categories ul li a:hover, .widget_categories ul li a:active { outline: none; }
+.widget_categories ul li a:active {
+  outline: 0;
+  position: relative;
+  top: 1px;
+  color: #BED730;
+}
+
+.widget_categories ul {
+  list-style: none;
+}
+.widget_categories ul li {
+  padding-left: 23px;
+  margin-top: 4px;
+  background-image: url(../img/box.gif);
+  background-repeat: no-repeat;
+  background-position-y: 50%
 }
